--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section>
         <div class="header2">
             <div class="images">
-                <img src="image/db8547248d83a1f03b67414f820d260ae3eece0c(1).png" alt="img" >
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/00a84a7ced3c6c1dfbf99f1a58a992449b0a638b.jpg" alt="img" >
             </div>
             <div class="font">
                 <h1>
@@ -116,7 +116,7 @@
             <div class="image">
                 <h2>France</h2>
                 <div class="con">
-                    <img src="image/france.jpg" alt="France">
+                    <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/france.jpg" alt="France">
                 </div>
             </div>
         </div>
