--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="header">
         <h3>Logoipsum</h3>
         <h6>.com</h6>
-        <img src="image/logo.png" alt="logo">
+        <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/logo.png" alt="logo">
         <div class="a">
             <a href="#">HOME</a>
             <a href="#">Properties</a>
@@ -30,7 +30,7 @@
     <section>
         <div class="header2">
             <div class="images">
-                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/00a84a7ced3c6c1dfbf99f1a58a992449b0a638b.jpg" alt="img" >
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/db8547248d83a1f03b67414f820d260ae3eece0c(1).png" alt="img" >
             </div>
             <div class="font">
                 <h1>
@@ -74,7 +74,7 @@
                         </select>
                     </div>
                     <div class="option">
-                        <img src="image/images.png" alt="sercg">
+                        <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/images.png" alt="sercg">
                     </div>
                 </div>
             </div>
@@ -95,21 +95,21 @@
             <div class="image">
                 <h2>America</h2>
                 <div class="con">
-                    <img src="image/amreca.jpg" alt="amreca">
+                    <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/amreca.jpg" alt="amreca">
                 </div>
             </div>
 
             <div class="image">
                 <h2>SPAIN</h2>
                 <div class="con">
-                    <img src="image/spain.jpg" alt="Spain">
+                    <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/spain.jpg" alt="Spain">
                 </div>
             </div>
 
             <div class="image">
                 <h2>London</h2>
                 <div class="con">
-                    <img src="image/london.jpg" alt="London">
+                    <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/london.jpg" alt="London">
                 </div>
             </div>
 
@@ -131,7 +131,7 @@
         </div>
         <div class="cards2">
             <div class="crd">
-                <img src="image/img1(1).jpg" alt="img1" >
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img1(1).jpg" alt="img1" >
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
@@ -144,7 +144,7 @@
 
 
             <div class="crd">
-                <img src="image/img2.jpg" alt="img1" width="100" height="100">
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img2.jpg" alt="img1" width="100" height="100">
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
@@ -157,7 +157,7 @@
 
 
             <div class="crd">
-                <img src="image/img3.jpg" alt="img1" width="100" height="100">
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img3.jpg" alt="img1" width="100" height="100">
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
@@ -170,7 +170,7 @@
 
 
             <div class="crd">
-                <img src="image/img4.jpg" alt="img1" width="100" height="100">
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img4.jpg" alt="img1" width="100" height="100">
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
@@ -183,7 +183,7 @@
 
 
             <div class="crd">
-                <img src="image/img5.jpg" alt="img1" width="100" height="100">
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img5.jpg" alt="img1" width="100" height="100">
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
@@ -196,7 +196,7 @@
 
 
             <div class="crd">
-                <img src="image/img6.jpg" alt="img1" width="100" height="100">
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img6.jpg" alt="img1" width="100" height="100">
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
@@ -228,7 +228,7 @@
 
     <section class="footer">
       <div>
-          <img src="image/logo.png" alt="logo">
+          <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/logo.png" alt="logo">
       </div>
         <h3>Logoipsum</h3>
         <h6>.com</h6>
