--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
 
             <div class="crd">
-                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img2.jpg" alt="img1" width="100" height="100">
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img2.jpg" alt="img2" >
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
@@ -158,7 +158,7 @@
 
 
             <div class="crd">
-                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img3.jpg" alt="img1" width="100" height="100">
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img3.jpg" alt="img3" >
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
@@ -171,7 +171,7 @@
 
 
             <div class="crd">
-                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img4.jpg" alt="img1" width="100" height="100">
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img4.jpg" alt="img4" >
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
@@ -184,7 +184,7 @@
 
 
             <div class="crd">
-                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img5.jpg" alt="img1" width="100" height="100">
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img5.jpg" alt="img5">
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
@@ -197,7 +197,7 @@
 
 
             <div class="crd">
-                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img6.jpg" alt="img1" width="100" height="100">
+                <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/img6.jpg" alt="img6">
                 <div class="info">
                     <h3>103/143 West Street, <br>Crows Nest</h3>
                     <p>
