--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="https://media.githubusercontent.com/media/Anas-elkouri/brief2_Design_Web_pour_ListoGo/refs/heads/main/image/logo.png" alt="logo">
         <div class="a">
             <a href="#">HOME</a>
-            <a href="#">Properties</a>
+            <a href="propo.html">Properties</a>
             <a href="#">Blog</a>
             <a href="#">Contact</a>
         </div>
@@ -128,7 +128,7 @@
     <section class="consept2">
         <div class="head">
             <h3 class="text-h3">Recently Added</h3>
-            <a href="#consept2" class="see-all">see all</a>
+            <a href="propo.html" class="see-all">see all</a>
         </div>
         <div class="cards2">
             <div class="crd">
