--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div class="a">
             <a href="#">HOME</a>
             <a href="propo.html">Properties</a>
-            <a href="#">Blog</a>
-            <a href="#">Contact</a>
+            <a href="Blog.html">Blog</a>
+            <a href="contact.html">Contact</a>
         </div>
         <div class="btn">
-            <button>LOG IN</button>
+            <a href="login.html">LOG IN</a>
         </div>
     </header>
     <section>
